localized berry descriptions

--- a/pokecube/lang/en_US.lang
+++ b/pokecube/lang/en_US.lang
@@ -1299,23 +1299,33 @@ item.dawnstone.name=Dawn Stone
 item.kingsrock.name=King's Rock
 item.luckyEgg.name=Lucky Egg
 
-
+item.berry.desc=Plant on Farmland to grow
 item.cheriBerry.name=Cheri Berry
+item.cheriBerry.desc=Cures Paralysis
 item.chestoBerry.name=Chesto Berry
+item.chestoBerry.desc=Cures Sleep
 item.pechaBerry.name=Pecha Berry
+item.pechaBerry.desc=Cures Poison
 item.rawstBerry.name=Rawst Berry
+item.rawstBerry.desc=Cures Burn
 item.aspearBerry.name=Aspear Berry
+item.aspearBerry.desc=Cures Freeze
 item.leppaBerry.name=Leppa Berry
 item.oranBerry.name=Oran Berry
+item.oranBerry.desc=Restores 10hp
 item.persimBerry.name=Persim Berry
 item.lumBerry.name=Lum Berry
+item.lumBerry.desc=Cures any status condition
 item.sitrusBerry.name=Sitrus Berry
+item.sitrusBerry.desc=Restores 25% of maximum HP
 item.nanabBerry.name=Nanab Berry
 item.pinapBerry.name=Pinap Berry
 item.cornnBerry.name=Cornn Berry
 item.enigmaBerry.name=Enigma Berry
 item.jabocaBerry.name=Jaboca Berry
+item.jabocaBerry.desc=Used to make Repel
 item.rowapBerry.name=Rowap Berry
+item.rowapBerry.desc=Used to make Repel
 item.berryjuice.name=Berry Juice
 
 item.hpup.name=HP UP
@@ -1362,10 +1372,11 @@ item.quickcube.name=Quickcube
 item.timercube.name=Timercube
 item.netcube.name=Netcube
 item.nestcube.name=Nestcube
-item.divecube.name=Netcube
+item.divecube.name=Divecube
 item.repeatcube.name=Repeatcube
-item.premiercube.name=Permiercube
+item.premiercube.name=Premiercube
 item.cherrishcube.name=Cherishcube
+item.duskcube.name=Duskcube
 
 item.HelixFossil.name=Helix Fossil
 item.DomeFossil.name=Dome Fossil
